mode modularity, better run resolving

--- a/gpt_dev/gpt_dev.html
+++ b/gpt_dev/gpt_dev.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="dist/gpt_dev/gpt_dev.css">
+        <link rel="stylesheet" href="./dist/gpt_dev/gpt_dev.css">
     </head>
     <body>  
-        <script src="dist/gpt_dev/gpt_dev.js">
+        <script src="./dist/gpt_dev/gpt_dev.js">
         </script>
     </body>
 </html>
